--- a/shopapp/static/shopapp/css/shopapp.css
+++ b/shopapp/static/shopapp/css/shopapp.css
@@ -1,7 +1,7 @@
 /*!!!!!!!!!!!!!!!!! HEADER !!!!!!!!!!!!!!!!!*/
 
 .header{
-    z-index: 1;
+    z-index: 10;
     width: 100%;
     height: 100px;
     box-shadow: 0px 4px 10px rgb(57, 0, 107);
@@ -9,7 +9,6 @@
     transition: background-color 0.3s ease;
 }
 .header__container{
-    z-index: 1;
     height: 100%;
     display: flex;
     position: relative;
@@ -17,7 +16,7 @@
     align-items: center;
 }
 .header-logo__link{
-    z-index: 2;
+    z-index: 10;
     margin-right: auto;
 }
 .header-logo{
@@ -67,18 +66,42 @@
     width: 25px;
 }
 
-/* .header__item-l:after{
-    content: "";
-    background-image: url('/static/shopapp/img/header/login.png');
-    background-size: cover;
-    position: absolute;
-    top: -10%;
-    left: -50%;
-    width: 25px;
-    height: 25px;
-    transform: rotate(0deg);
-} */
+.header-search__container {
+    display: flex;
+    position: relative;
+    align-items: center;
+    background-color: #d2b2ff;
+    border: 2px solid #C603D7   ;
+    border-radius: 3px;
+    width: 300px;
+    height: 35px;
 
+}
+.header-search {
+    display: block;
+    padding-left: 5px;
+    width: 87%;
+    height: 100%;
+    color: #0D0316;
+    align-content: center;
+    font-weight: 600;
+    background-color: transparent;
+}
+.search-img {
+    position: absolute;
+    right: 0;
+    display: block;
+    width: 32px;
+    height: 100%;
+    margin-left: 0px;
+    cursor: pointer;
+    align-content: center;
+}
+.search-img img {
+    width: 90%;
+    height: 90%;
+    object-fit: contain;
+}
 .header-button{
     font-family: "Montserrat";
     padding: 10px 45px;
@@ -93,9 +116,9 @@
 }
 .header-menu{
     height: 60%;
-    margin: 0 0 0 7%;
+    margin: 0 0 0 5%;
     cursor: pointer;
-    z-index: 2;
+    z-index: 10;
     transition: filter 0.3s ease;
 }
 .header-menu:hover{
@@ -123,7 +146,7 @@
     right: calc(-1 * (100vw - 100%));
     bottom: 0;
     margin: auto;
-    z-index: 3;
+    z-index: 20;
     opacity: 0;
     visibility: hidden;
     transition: opacity 0.4s ease, visibility 0.4s ease;
@@ -303,7 +326,7 @@
     position: absolute;
     top: 0;
     right: -50%;
-    z-index: 3;
+    z-index: 20;
     background-color: var(--color-bg);
     transition: background-color 0.3s ease, right 0.7s ease;
 }
@@ -375,7 +398,7 @@ div:before {transform: rotate(-45deg);}
     top: 0; 
     left: 0;
     background: rgba(0,0,0,0.5);
-    z-index: 2;
+    z-index: 10;
     visibility: hidden;
     opacity: 0;
     transition: opacity 0.3s ease, visibility 0.3s ease;
