--- a/shopapp/templates/shopapp/index.html
+++ b/shopapp/templates/shopapp/index.html
@@ -26,7 +26,7 @@
                 <img src="{% static "shopapp/img/component/processor.png" %}" alt="Processors">
                 <p>Processors</p>
             </a>
-            <a href="{% url "catalog:index" "videocards" %}" class="components__item">
+            <a href="{% url "catalog:index" "video-cards" %}" class="components__item">
                 <img class="components__item__videocard" src="{% static "shopapp/img/component/videocard.png" %}" alt="Videocards" >
                 <p>Video cards</p>
             </a>
