--- a/users/templates/users/log in.html
+++ b/users/templates/users/log in.html
@@ -10,7 +10,7 @@ Log in to your account
 
 {% block anotherway %}
 <h2 class="auth-subtitle">Don't have an account?</h2>
-<a href="{% url "auth:signup" %}">
+<a href="{% url "user:signup" %}">
     <h1 class="auth-title auth-title__signup">Sign up</h1>
 </a>
 {% endblock %}
