--- a/users/templates/users/sign up.html
+++ b/users/templates/users/sign up.html
@@ -17,7 +17,7 @@ Sign up
 
 {% block anotherway %}
 <h2 class="auth-subtitle">Already have an account?</h2>
-<a href="{% url "auth:login" %}">
+<a href="{% url "user:login" %}">
     <h1 class="auth-title auth-title__signup">Log in</h1>
 </a>
 {% endblock %}
