--- a/shopapp/static/shopapp/css/shopapp.css
+++ b/shopapp/static/shopapp/css/shopapp.css
@@ -51,7 +51,7 @@
 }
 .header__item-l p:before {
     content:"";
-    bottom: -3px;
+    bottom: -2px;
 }
 .header__item-l{
     position: relative;
@@ -59,7 +59,8 @@
     justify-content: center;
     align-items: center;
 }
-.header__item-l img{
+.header__item-l img {
+    margin-right: 2px;
     width: 25px;
 }
 .header__item-l:hover p:before{
