authorization via email, google oauth

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,7 +2,7 @@
     font-family: "Inter", sans-serif;
     font-weight: 500;
     font-size: 18px;
-    color: #c603d7;
+    color: #C603D7;
 }
 
 body.dark{
