--- a/users/static/users/css/auth.css
+++ b/users/static/users/css/auth.css
@@ -1,15 +1,14 @@
-body{
+body {
     background-color: #070010;
-    padding: 0 30px;
     overflow: hidden;
 }
-h1, h2, button, label, a{
+h1, h2, button, label, a {
     font-family: "Inter";
     font-size: 20px;
     font-weight: 600;
     color: #6D32BA;
 }
-h1{
+h1 {
     font-size: 30px;
     font-weight: 800;
     color: #9747FF;
@@ -22,9 +21,6 @@ h1{
         font-size: 24px;
     }
 }
-
-
-
 
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
@@ -53,6 +49,7 @@ input:-webkit-autofill:focus {
 .auth-logo{ 
     position: absolute;
     top: 30px;
+    left: 50px;
     width: 80px;
 } 
 
@@ -68,9 +65,27 @@ input:-webkit-autofill:focus {
     margin: 30px 0 30px 0;
 }
 .auth-services {
-    border: 1px solid #9747FF;
-    height: 50px;
+    height: 40px;
     margin: 15px 0 40px 0;
+}
+.auth-service {
+    display: block;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+    border: 1px solid #0D0316;
+    border-radius: 10px;
+
+}
+.auth-service img {
+    width: 30px;
+    margin-right: 15px;
+}
+.auth-service p {
+    color: #0D0316;
 }
 .auth-form {
     position: relative;
