--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,12 +1,51 @@
 {% extends "home.html" %}
+{% load static %}
+
+{% block link %}
+<link rel="stylesheet" href="{% static 'shopapp/css/shopapp.css' %}">
+<link rel="stylesheet" href="{% static 'users/css/profile.css' %}">
+{% endblock %}
+
+{% block title %}
+{{ title }}
+{% endblock %}
 
 {% block main_content %}
-<div>
-    <p class="subtitle">
-        Звать тебя {{ user.username }}, а твоя почта: {{ user.email }}
-    </p>
-    <br><br><br><br><br><br><br><br><br><br>
-    <a href="{% url "user:logout" %}" class="subtitle">
+<div class="_container profile_container">
+    <form action="{% url "user:profile" %}" method="post" enctype="multipart/form-data" class="profile-form profile__row">
+        {% csrf_token %}
+        <div class="profile__item profile-img">
+            {% if user.image %}
+                <img src="{{ user.image.url }}" alt="" style="max-width: 300px; max-height: 500px">
+            {% else %}
+                <img src="{% static "users/img/profile/image.png" %}" alt="" style="max-width: 300px">
+            {% endif %}
+            <input type="file" id="id_image" name="image" accept="image/*" class="subtitle profile-img-input">
+            {% if form.image.errors %}
+            <div class="signup-errors">{{form.image.errors}}</div>
+            {% endif %}
+        </div>
+        <div class="profile__item">
+            <label for="id_name" class="subtitle profile-subtitle">
+                Звать тебя:
+            </label>
+            <input type="text" id="id_name" name="name" value="{% if form.name.value %}{{ form.name.value }}{% endif %}" class="subtitle profile-input">
+            {% if form.name.errors %}
+            <div class="signup-errors">{{form.name.errors}}</div>
+            {% endif %}
+        </div>
+        <div class="profile__item">
+            <label for="id_email" class="subtitle profile-subtitle">
+                Email твой:
+            </label>
+            <input type="email" id="id_email" name="email" value="{{ form.email.value }}" class="subtitle profile-input">
+            {% if form.email.errors %}
+            <div class="signup-errors">{{form.email.errors}}</div>
+            {% endif %}
+        </div> 
+        <button type="submit" class="profile-save-btn">Save</button>
+    </form>
+    <a href="{% url "user:logout" %}" class="subtitle profile-logout">
         logout
     </a>
 </div>
